--- a/2nd Semester/Introduction to Web Technologies/styles.css
+++ b/2nd Semester/Introduction to Web Technologies/styles.css
@@ -1,35 +1,34 @@
-html {
-    font-family: sans-serif;
-    background-color: rgb(43, 43, 43);
-    color:white;
-}
-
-table {
-    width: 80%;
-    height: 250px;
-    border-color: white;
-    background-color: rgb(5, 75, 5);
-}
-
-th {
-    font-size: 20px;
-}
-
-table td {
-    text-align: center;
-    margin: 0px;
+#container {
+    width: 60%;
+    margin: auto;
 }
 
 #logo {
-    background-color: rgb(105, 105, 105);
-    text-align: center;
-    font-size: 30px;
-    height: 40px;
-    width: 95%;
-    margin: 20px;
+    width: 100%;
+    height: 60px;
+    background-color: #00FF00;
+    color: #000000;
+    font-size: 16px;
+    border: 4px #0000FF solid;
+    padding: 20px;
 }
 
-#table {
+#section {
+    margin: 20px 0;
     width: 100%;
-    margin: auto;
+    height: 80px;
+    background-color: #00FF00;
+    color:#000000;
+    font-size: 16px;
+    border: 4px #0000FF solid;
+    padding: 20px;
+}
+
+.article {
+    width: 30%;
+    height: 60px;
+    background-color: #CECECE;
+    border: 1px solid #000000;
+    margin: 5px;
+    float: left;
 }
