--- a/2nd Semester/Interfaces e Tecnologias Web/Trabalho_Pratico/styles.css
+++ b/2nd Semester/Interfaces e Tecnologias Web/Trabalho_Pratico/styles.css
@@ -1,3 +1,5 @@
+/* -------------------------------------------------------------- PÁGINA PRINCIPAL ------------------------------------------------------ */
+
 .bg {
   background-color: rgb(233, 233, 233);
 }
@@ -30,6 +32,7 @@
   height: 1px;
   position: absolute;
   bottom: 0;
+  text-align: center;
 }
 
 /* Animação dura 0.2s e zoom de 115% "on hover" */
@@ -69,13 +72,13 @@
   color: rgb(0, 61, 136);
 }
 
-.price {
+.pvpr {
   position: absolute;
   bottom: 5%;
   right: 10%;
 }
 
-.price-promo {
+.price {
   position: absolute;
   bottom: 5%;
 }
@@ -214,7 +217,7 @@
 }
 
 
-/* ------------------------------------------------------------------- PÁGINA DE AUTOR -------------------------------------------------- */
+/* --------------------------------------------------------------- PÁGINA DE AUTOR ------------------------------------------------------ */
 .my-mt-main {
   margin-top: 5%;
 }
@@ -237,3 +240,184 @@
   margin-top: 18.3%;
 }
 
+/* ------------------------------------------------------------ PÁGINA DE PRODUTOS ------------------------------------------------------ */
+.produtos-title {
+  margin-top: 5%;
+}
+
+.sidebar {
+  background-color: #eceff1;
+  padding: 20px;
+  border-radius: 10px;
+}
+
+.filter-section {
+  top: 85px;
+  background: #bbc6d6;  /* a0a0a0*/
+  color: black;
+}
+
+@media (max-width: 576px) {
+  .produtos-title {
+    margin-top: 25%;
+  }
+}
+
+/* ---------------------- Range Slider ----------------------- */
+
+.double-slider-box {
+  border-radius: 10px;
+  max-width: 20rem;
+}
+
+.range-slider {
+  position:relative;
+  width: 100%;
+  height: 5px;
+  margin: 20px 0;
+  background-color: #525252;
+}
+
+.slider-track {
+  height: 100%;
+  position: absolute;
+  background-color: #4063d4;
+}
+
+.range-slider input {
+  position: absolute;
+  width: 100%;
+  background: none;
+  pointer-events: none;
+  top: 50%;
+  transform: translateY(-50%);
+  appearance: none;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+  height: 25px;
+  width: 25px;
+  border-radius: 50%;
+  border: 2px solid #4063d4;
+  background: #fff;
+  pointer-events: auto;
+  cursor: pointer;
+}
+
+input[type="range"]::-moz-range-thumb {
+  height: 12px;
+  width: 12px;
+  border-radius: 50%;
+  border: 3px solid #4063d4;
+  background: #fff;
+  pointer-events: auto;
+  -moz-appearance: none;
+  cursor: pointer;
+  box-shadow: 0 .125rem .562rem -0.125rem rgba(0, 0, 0, 1);
+}
+
+.tooltip {
+  padding: .25rem .5rem;
+  border: 0;
+  background: #525252;
+  color: #fff;
+  font-size: .75rem;
+  border-radius:.25rem;
+  bottom: 120%;
+  display: block;
+  position: absolute;
+  text-align: center;
+  white-space: nowrap;
+}
+
+.min-tooltip {
+  left: 50%;
+  transform: translateX(-50%) translateY(-100%);
+  z-index: 5;
+}
+
+.max-tooltip {
+  right: 50%;
+  transform: translateX(50%) translateY(-100%);
+}
+
+.input-box {
+  display: flex;
+  justify-content: space-between;
+}
+
+.min-box, .max-box {
+  width: 30%;
+}
+
+.min-box {
+  padding-right: .5rem;
+  margin-right: .5rem; 
+}
+
+.input-wrap {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: stretch;
+  width: 100%;
+}
+
+.input-addon {
+  display: flex;
+  align-items: center;
+  padding: .25rem;
+  font-size: 400;
+  line-height: 0.5;
+  color: #000;
+  text-align: center;
+  white-space: nowrap;
+  background-color: #a9a9a9;
+  border: 1px solid #a9a9a9;
+  border-radius: .25rem;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
+.input-field {
+  margin-left: -1px;
+  padding: .425rem ;
+  font-size: 0.8125rem;
+  border-radius: .25rem;
+  position: relative;
+  flex: 1 1 auto;
+  width: 1%;
+  min-width: 0;
+  color: #000;
+  background-color: #a9a9a9;
+  background-clip: padding-box;
+  border: 1px solid #a9a9a9;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
+.input-field:focus {
+  outline: none;
+}
+
+/*--------------------------  Produtos ------------------------------ */
+.my-product-card {
+  margin-left: 10px;
+  margin-bottom: 20px;
+  width: 22%;
+  height: 570px;
+}
+
+
+/* ------------------------------------------------------------- CONTACTOS ---------------------------------------------------------------*/
+.contactos {
+  margin-top: 5%;
+}
+
+.mapa {
+  height: 200px;
+}
+
+.number-code {
+  color:#4063d4
+}
